#!/usr/bin/env node

/**
 * è¿æ¥çŠ¶æ€å®æ—¶æ›´æ–°è¯Šæ–­æµ‹è¯•
 *
 * è¿™ä¸ªè„šæœ¬æ¨¡æ‹Ÿå¹³å°è¿æ¥åçš„çŠ¶æ€æ›´æ–°é—®é¢˜ï¼Œæ£€æŸ¥ï¼š
 * 1. å¹³å°æ•°æ®ç›‘å¬æ˜¯å¦æ­£å¸¸
 * 2. è¿æ¥åçš„çŠ¶æ€åŒæ­¥æœºåˆ¶
 * 3. æ•°æ®æºæŒ‡ç¤ºå™¨æ›´æ–°é€»è¾‘
 * 4. è½½è·çŠ¶æ€åŒæ­¥é—®é¢˜
 */

const dgram = require("dgram");
const protobuf = require("protobufjs");
const path = require("path");

// æ¨¡æ‹Ÿè¿æ¥çš„å¹³å°ä¿¡æ¯
const TEST_PLATFORM = {
  name: "æ— äººæœº-001",
  group: "ç¬¬ä¸€æ— äººæœºå¤§é˜Ÿ",
  type: "UAV01",
};

// åˆ›å»ºæµ‹è¯•ç”¨çš„å¹³å°çŠ¶æ€æ•°æ®
async function createPlatformStatusData() {
  try {
    // åŠ è½½protobufå®šä¹‰
    const protoPath = path.join(__dirname, "src/protobuf/PlatformStatus.proto");
    const root = await protobuf.load(protoPath);
    const PlatformsMessage = root.lookupType("PlatformStatus.Platforms");

    // åˆ›å»ºä¸€ä¸ªåŒ…å«ä¼ æ„Ÿå™¨çŠ¶æ€å˜åŒ–çš„å¹³å°æ•°æ®
    const platformData = {
      platform: [
        {
          base: {
            name: TEST_PLATFORM.name,
            type: TEST_PLATFORM.type,
            side: "red",
            group: TEST_PLATFORM.group,
            broken: false,
            location: {
              longitude: 116.397428 + (Math.random() - 0.5) * 0.001, // è½»å¾®ä½ç½®å˜åŒ–
              latitude: 39.90923 + (Math.random() - 0.5) * 0.001,
              altitude: 150 + Math.random() * 50,
            },
            roll: Math.random() * 10 - 5,
            pitch: Math.random() * 10 - 5,
            yaw: Math.random() * 360,
            speed: 50 + Math.random() * 20,
          },
          updateTime: Date.now() / 1000, // æ¼”ä¹ æ—¶é—´
          mover: {
            type: "Quadrotor",
            route: [],
          },
          comms: [
            {
              base: {
                name: "æ•°æ®é“¾è·¯",
                type: "DataLink",
                isTurnedOn: true,
              },
              network: "å†›ç”¨ç½‘ç»œ",
            },
          ],
          sensors: [
            {
              base: {
                name: "å…‰ç”µåŠèˆ±",
                type: "EOIR_CAMERA",
                isTurnedOn: Math.random() > 0.5, // éšæœºå¼€å…³çŠ¶æ€
                currentEl: Math.random() * 90 - 45, // ä¿¯ä»°è§’
                currentAz: Math.random() * 360, // æ–¹ä½è§’
              },
              mode: "æœç´¢æ¨¡å¼",
            },
            {
              base: {
                name: "æ¿€å…‰æµ‹è·ä»ª",
                type: "LASER_RANGEFINDER",
                isTurnedOn: Math.random() > 0.3, // éšæœºå¼€å…³çŠ¶æ€
                currentEl: Math.random() * 90 - 45,
                currentAz: Math.random() * 360,
              },
              mode: "å¾…æœºæ¨¡å¼",
              laserCode: Math.floor(Math.random() * 9999) + 1000, // éšæœºæ¿€å…‰ç¼–ç 
            },
          ],
          weapons: [
            {
              base: {
                name: "å°å‹å¯¼å¼¹",
                type: "MISSILE",
                isTurnedOn: true,
              },
              quantity: Math.floor(Math.random() * 4) + 1,
            },
          ],
          tracks: [
            // éšæœºç”Ÿæˆä¸€äº›è·Ÿè¸ªç›®æ ‡
            ...(Math.random() > 0.6
              ? [
                  {
                    sensorName: "å…‰ç”µåŠèˆ±",
                    targetName: `ç›®æ ‡-${Math.floor(Math.random() * 100) + 1}`,
                    targetType: "åœ°é¢ç›®æ ‡",
                  },
                ]
              : []),
          ],
        },
      ],
      // æ·»åŠ ç¯å¢ƒå‚æ•°
      evironment: {
        temperature: 20 + Math.random() * 15, // 20-35åº¦
        windSpeed: Math.random() * 10, // 0-10 m/s
        windDirection: Math.random() * 360, // é£å‘è§’åº¦
        cloudLowerAlt: Math.random() * 2000,
        cloudUpperAlt: 2000 + Math.random() * 3000,
        rainRate: Math.random() * 0.001, // é™æ°´ç‡ m/s
      },
    };

    return PlatformsMessage;
  } catch (error) {
    console.error("åˆ›å»ºå¹³å°æ•°æ®å¤±è´¥:", error);
    throw error;
  }
}

// æ„å»ºå®Œæ•´çš„ç»„æ’­æ•°æ®åŒ…
function buildMulticastPacket(platformsMessage, platformData) {
  try {
    // ç¼–ç Protobufæ•°æ®
    const encodedData = platformsMessage.encode(platformData).finish();

    // æ„å»ºå®Œæ•´çš„æ•°æ®åŒ…
    const packetHeader = Buffer.alloc(8);
    packetHeader[0] = 0xaa; // åŒ…å¤´1
    packetHeader[1] = 0x55; // åŒ…å¤´2
    packetHeader[2] = 0x01; // ç‰ˆæœ¬å·
    packetHeader[3] = 0x29; // åŒ…ç±»å‹ (PlatformStatus)

    // æ•°æ®é•¿åº¦ (å°ç«¯åº)
    const dataLength = encodedData.length;
    packetHeader.writeUInt32LE(dataLength, 4);

    // ç»„åˆæ•°æ®åŒ…
    return Buffer.concat([packetHeader, encodedData]);
  } catch (error) {
    console.error("æ„å»ºæ•°æ®åŒ…å¤±è´¥:", error);
    throw error;
  }
}

// å‘é€æµ‹è¯•æ•°æ®
async function sendTestData() {
  console.log("ğŸš€ å¼€å§‹è¿æ¥çŠ¶æ€æ›´æ–°è¯Šæ–­æµ‹è¯•...\n");

  try {
    const platformsMessage = await createPlatformStatusData();
    const client = dgram.createSocket("udp4");

    // å¤šæ’­åœ°å€å’Œç«¯å£
    const MULTICAST_ADDR = "239.255.43.21";
    const MULTICAST_PORT = 10086;

    let sequence = 0;

    console.log(`ğŸ“¡ ç›®æ ‡å¹³å°: ${TEST_PLATFORM.name} (${TEST_PLATFORM.group})`);
    console.log(`ğŸ”— å‘é€åœ°å€: ${MULTICAST_ADDR}:${MULTICAST_PORT}`);
    console.log("â° å¼€å§‹å‘é€å®æ—¶çŠ¶æ€æ›´æ–°...\n");

    // å®šæœŸå‘é€æ•°æ®åŒ…æ¥æ¨¡æ‹Ÿå®æ—¶æ›´æ–°
    const interval = setInterval(async () => {
      try {
        sequence++;

        // åˆ›å»ºå¹³å°æ•°æ®
        const platformData = {
          platform: [
            {
              base: {
                name: TEST_PLATFORM.name,
                type: TEST_PLATFORM.type,
                side: "red",
                group: TEST_PLATFORM.group,
                broken: false,
                location: {
                  longitude: 116.397428 + (Math.random() - 0.5) * 0.002,
                  latitude: 39.90923 + (Math.random() - 0.5) * 0.002,
                  altitude: 150 + Math.sin(sequence * 0.1) * 20, // é«˜åº¦ç¼“æ…¢å˜åŒ–
                },
                roll: Math.sin(sequence * 0.2) * 5,
                pitch: Math.cos(sequence * 0.15) * 3,
                yaw: (sequence * 2) % 360,
                speed: 50 + Math.sin(sequence * 0.3) * 10,
              },
              updateTime: sequence, // é€’å¢çš„æ¼”ä¹ æ—¶é—´
              sensors: [
                {
                  base: {
                    name: "å…‰ç”µåŠèˆ±",
                    type: "EOIR_CAMERA",
                    isTurnedOn: sequence % 10 < 7, // å‘¨æœŸæ€§å¼€å…³
                    currentEl: Math.sin(sequence * 0.1) * 45,
                    currentAz: (sequence * 5) % 360,
                  },
                  mode: sequence % 10 < 7 ? "æœç´¢æ¨¡å¼" : "å¾…æœºæ¨¡å¼",
                },
                {
                  base: {
                    name: "æ¿€å…‰æµ‹è·ä»ª",
                    type: "LASER_RANGEFINDER",
                    isTurnedOn: sequence % 15 < 10, // ä¸åŒçš„å‘¨æœŸ
                    currentEl: Math.cos(sequence * 0.12) * 30,
                    currentAz: (sequence * 3) % 360,
                  },
                  mode: "æµ‹è·æ¨¡å¼",
                  laserCode: 1234 + (sequence % 100), // æ¿€å…‰ç¼–ç å˜åŒ–
                },
              ],
              weapons: [
                {
                  base: {
                    name: "å°å‹å¯¼å¼¹",
                    type: "MISSILE",
                    isTurnedOn: true,
                  },
                  quantity: Math.max(1, 4 - Math.floor(sequence / 20)), // å¼¹è¯é€æ¸å‡å°‘
                },
              ],
              tracks:
                sequence % 5 === 0
                  ? []
                  : [
                      {
                        sensorName: "å…‰ç”µåŠèˆ±",
                        targetName: `ç›®æ ‡-${100 + (sequence % 5)}`,
                        targetType: "åœ°é¢è½¦è¾†",
                      },
                    ],
            },
          ],
          evironment: {
            temperature: 25 + Math.sin(sequence * 0.05) * 5, // æ¸©åº¦å˜åŒ–
            windSpeed: 3 + Math.random() * 2,
            windDirection: (sequence * 10) % 360,
            cloudLowerAlt: 1000 + Math.sin(sequence * 0.02) * 500,
            cloudUpperAlt: 3000 + Math.cos(sequence * 0.03) * 1000,
            rainRate: Math.max(0, Math.sin(sequence * 0.01) * 0.002),
          },
        };

        // æ„å»ºå¹¶å‘é€æ•°æ®åŒ…
        const packet = buildMulticastPacket(platformsMessage, platformData);

        client.send(packet, MULTICAST_PORT, MULTICAST_ADDR, (err) => {
          if (err) {
            console.error(`âŒ å‘é€å¤±è´¥ #${sequence}:`, err.message);
          } else {
            console.log(`âœ… #${sequence} - å¹³å°çŠ¶æ€å·²æ›´æ–°:`);
            console.log(
              `   ä½ç½®: ${platformData.platform[0].base.location.longitude.toFixed(
                6
              )}, ${platformData.platform[0].base.location.latitude.toFixed(6)}`
            );
            console.log(
              `   å§¿æ€: ä¿¯ä»°${platformData.platform[0].base.pitch.toFixed(
                1
              )}Â° åèˆª${platformData.platform[0].base.yaw.toFixed(1)}Â°`
            );
            console.log(
              `   å…‰ç”µ: ${
                platformData.platform[0].sensors[0].base.isTurnedOn
                  ? "å¼€å¯"
                  : "å…³é—­"
              } æ¿€å…‰: ${
                platformData.platform[0].sensors[1].base.isTurnedOn
                  ? "å¼€å¯"
                  : "å…³é—­"
              }`
            );
            console.log(
              `   ç¯å¢ƒ: ${platformData.platform[0].evironment.temperature.toFixed(
                1
              )}Â°C é£é€Ÿ${platformData.platform[0].evironment.windSpeed.toFixed(
                1
              )}m/s`
            );
            console.log(`   ç›®æ ‡: ${platformData.platform[0].tracks.length}ä¸ª`);
            console.log("");
          }
        });
      } catch (error) {
        console.error(`âŒ å‘é€æ•°æ®åŒ… #${sequence} æ—¶å‡ºé”™:`, error.message);
      }
    }, 2000); // æ¯2ç§’å‘é€ä¸€æ¬¡ï¼Œæ¨¡æ‹Ÿå®æ—¶æ›´æ–°

    // 10åˆ†é’Ÿååœæ­¢æµ‹è¯•
    setTimeout(() => {
      clearInterval(interval);
      client.close();
      console.log("\nğŸ è¿æ¥çŠ¶æ€æ›´æ–°æµ‹è¯•å·²ç»“æŸ");
      console.log("\nğŸ“‹ æµ‹è¯•æ€»ç»“:");
      console.log(`   æ€»å…±å‘é€: ${sequence} ä¸ªçŠ¶æ€æ›´æ–°`);
      console.log(`   æµ‹è¯•å¹³å°: ${TEST_PLATFORM.name}`);
      console.log("\nğŸ” è¯·æ£€æŸ¥æ“ä½œé¡µé¢æ˜¯å¦å®æ—¶æ˜¾ç¤ºäº†ä»¥ä¸‹å†…å®¹çš„å˜åŒ–:");
      console.log("   1. å¹³å°ä½ç½®å’Œå§¿æ€");
      console.log("   2. è½½è·å¼€å…³çŠ¶æ€ (å…‰ç”µ/æ¿€å…‰)");
      console.log("   3. ç¯å¢ƒå‚æ•° (æ¸©åº¦/é£é€Ÿ)");
      console.log('   4. æ•°æ®æºæŒ‡ç¤ºå™¨ (åº”æ˜¾ç¤º"å®æ—¶æ•°æ®")');
      console.log("   5. ç›®æ ‡è·Ÿè¸ªä¿¡æ¯");

      process.exit(0);
    }, 10 * 60 * 1000); // 10åˆ†é’Ÿ
  } catch (error) {
    console.error("âŒ æµ‹è¯•åˆå§‹åŒ–å¤±è´¥:", error);
    process.exit(1);
  }
}

// æ£€æŸ¥é—®é¢˜çš„è¯Šæ–­å‡½æ•°
function printDiagnosticInfo() {
  console.log("ğŸ” è¿æ¥çŠ¶æ€ä¸æ›´æ–°é—®é¢˜è¯Šæ–­æŒ‡å—:\n");

  console.log("ğŸš¨ å¯èƒ½çš„é—®é¢˜åŸå› :");
  console.log("1. äº‹ä»¶ç›‘å¬æœªæ­£ç¡®ç»‘å®š");
  console.log("   - æ£€æŸ¥ window.electronAPI.multicast.onPacket æ˜¯å¦å¯ç”¨");
  console.log("   - ç¡®è®¤ handlePlatformStatus å‡½æ•°è¢«æ­£ç¡®è°ƒç”¨\n");

  console.log("2. è¿æ¥çŠ¶æ€åŒæ­¥å¤±è´¥");
  console.log("   - connectedPlatform.value å¯èƒ½æœªæ­£ç¡®æŒ‡å‘å·²è¿æ¥å¹³å°");
  console.log("   - isConnected.value çŠ¶æ€å¯èƒ½ä¸å‡†ç¡®\n");

  console.log("3. æ•°æ®è¿‡æ»¤æˆ–åŒ¹é…é—®é¢˜");
  console.log("   - å¹³å°åç§°ä¸åŒ¹é…å¯¼è‡´æ•°æ®è¢«å¿½ç•¥");
  console.log("   - å¹³å°ç±»å‹è¯†åˆ«é”™è¯¯\n");

  console.log("4. è½½è·çŠ¶æ€åŒæ­¥é—®é¢˜");
  console.log("   - ä¼ æ„Ÿå™¨ isTurnedOn å­—æ®µæœªæ­£ç¡®è§£æ");
  console.log("   - å¼€å…³çŠ¶æ€æœªåŒæ­¥åˆ°ç•Œé¢ç»„ä»¶\n");

  console.log("ğŸ› ï¸  è°ƒè¯•å»ºè®®:");
  console.log("1. åœ¨æµè§ˆå™¨å¼€å‘è€…å·¥å…·ä¸­æ£€æŸ¥consoleæ—¥å¿—");
  console.log("2. ç¡®è®¤å¹³å°æ•°æ®åŒ…æ­£ç¡®è§£æ (packageType === 0x29)");
  console.log("3. éªŒè¯ connectedPlatformName.value ä¸æ”¶åˆ°çš„å¹³å°åç§°åŒ¹é…");
  console.log("4. æ£€æŸ¥ updatePlatformStatusDisplay å‡½æ•°æ˜¯å¦è¢«è°ƒç”¨");
  console.log("5. ç¡®è®¤æ•°æ®æºæŒ‡ç¤ºå™¨é€»è¾‘æ­£ç¡®\n");
}

// ä¸»å‡½æ•°
async function main() {
  printDiagnosticInfo();

  console.log("ğŸ¯ å³å°†å¼€å§‹å‘é€æµ‹è¯•æ•°æ®...");
  console.log("è¯·ç¡®ä¿:");
  console.log("1. åº”ç”¨ç¨‹åºæ­£åœ¨è¿è¡Œ");
  console.log("2. å·²è¿æ¥åˆ°ç›®æ ‡å¹³å° (æ— äººæœº-001)");
  console.log("3. å¼€å¯äº†ç»„æ’­ç›‘å¬");
  console.log("\næŒ‰ Enter ç»§ç»­...");

  // ç­‰å¾…ç”¨æˆ·ç¡®è®¤
  process.stdin.once("data", () => {
    sendTestData();
  });
}

// å¤„ç†ç¨‹åºé€€å‡º
process.on("SIGINT", () => {
  console.log("\n\nğŸ›‘ æµ‹è¯•è¢«ç”¨æˆ·ä¸­æ–­");
  process.exit(0);
});

process.on("uncaughtException", (error) => {
  console.error("\nâŒ æœªæ•è·çš„å¼‚å¸¸:", error);
  process.exit(1);
});

// å¯åŠ¨æµ‹è¯•
main().catch((error) => {
  console.error("âŒ æµ‹è¯•å¯åŠ¨å¤±è´¥:", error);
  process.exit(1);
});
